2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test NSCustomImageRep, and test that
	drawing it still works even if the rep size is not set.

2011-07-19  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test SVG and PDF drawing.

2011-07-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test drawing images with a combination
	of flip, rotation, scale, and translation

2011-07-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test drawing images in a a flipped view

2011-07-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test:
	* Image-test: Split part of ImageSelection test off in to a new test
	for general testing of image drawing.

2011-07-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Test
	+[NSGraphicsContext graphicsContextWithBitmapImageRep:], which isn't
	working with cairo.

2011-06-27  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Test that drawing a vector
	rep scales properly.

2011-06-16  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Also test NSButton's image
	scaling

2011-06-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Test NSImageView scaling

2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Add a few more cases

2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Test drawing sub-
	regions of images.

2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Expand to include
	tests for -setSize: as well as complex clipping paths

2011-06-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test: Fix the TIFFs, which had some sub-images
	inadvertently set to greyscale.
